Fix text overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -253,11 +253,14 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     word-wrap: break-word;
+
 }
 
 
 .post-body {
     font-size: 1.4rem;
+    word-break: break-word;
+    /* word-break: break-all; */
     /* overflow: hidden;
     /* display: flex;   */
     /* flex-direction: column;
